force-app/main/default/objects/Stylist__c/Stylist__c.object-meta.xml
<CustomObject>
    <label>Stylist</label>
    <pluralLabel>Stylists</pluralLabel>
    <nameField>
        <label>Stylist Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Staff members who provide salon services</description>
</CustomObject>