force-app/main/default/objects/Stylist__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <label>Active</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>Whether this stylist is currently working</description>
    <inlineHelpText>Uncheck if stylist is no longer available for bookings</inlineHelpText>
</CustomField>