force-app/main/default/objects/Stylist__c/fields/Bio__c.field-meta.xml
<CustomField>
    <fullName>Bio__c</fullName>
    <label>Bio</label>
    <type>LongTextArea</type>
    <length>5000</length>
    <description>Professional biography shown to customers</description>
    <inlineHelpText>Write a brief bio about this stylist's experience and specialties</inlineHelpText>
</CustomField>