force-app/main/default/objects/Stylist__c/fields/Commission_Rate__c.field-meta.xml
<CustomField>
    <fullName>Commission_Rate__c</fullName>
    <label>Commission Rate</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
    <description>Percentage of service revenue paid to stylist</description>
    <inlineHelpText>Commission percentage for calculating stylist earnings</inlineHelpText>
</CustomField>