force-app/main/default/objects/Stylist__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Stylist Record</relationshipLabel>
    <relationshipName>Stylist_Records</relationshipName>
    <description>Contact record for this stylist's personal info</description>
    <inlineHelpText>Link to the stylist's contact record for personal details</inlineHelpText>
</CustomField>