force-app/main/default/objects/Stylist__c/fields/Hire_Date__c.field-meta.xml
<CustomField>
    <fullName>Hire_Date__c</fullName>
    <label>Hire Date</label>
    <type>Date</type>
    <description>Date this stylist started working at the salon</description>
    <inlineHelpText>When did this stylist join the salon?</inlineHelpText>
</CustomField>