force-app/main/default/objects/Stylist__c/fields/Photo_URL__c.field-meta.xml
<CustomField>
    <fullName>Photo_URL__c</fullName>
    <label>Photo URL</label>
    <type>Url</type>
    <description>URL to the stylist's profile photo</description>
    <inlineHelpText>Link to profile photo for display on booking site</inlineHelpText>
</CustomField>