force-app/main/default/objects/Stylist__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title</label>
    <type>Picklist</type>
    <description>Professional title or level</description>
    <inlineHelpText>Stylist's professional level</inlineHelpText>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Junior Stylist</fullName>
            </value>
            <value>
                <fullName>Stylist</fullName>
                <default>true</default>
                <label>Stylist</label>
            </value>
            <value>
                <fullName>Senior Stylist</fullName>
            </value>
            <value>
                <fullName>Master Stylist</fullName>
            </value>
            <value>
                <fullName>Salon Director</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>