force-app/main/default/objects/Stylist__c/listViews/Active_Stylists.listView-meta.xml
<ListView>
    <fullName>Active_Stylists</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Contact__c</columns>
    <columns>Hire_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Stylists</label>
</ListView>